# rocinante

./: README.md  docker-compose.yml  pyproject.toml  serverless.yml
backend/: pyproject.toml
backend/app/: initial_data.py  main.py
backend/app/api/v1/routers/: items.py
backend/app/core/: config.py  security.py
infrastructure/: ssm.tf
infrastructure/terraform/: iam_lambda.tf  main.tf  s3.tf
kube/: apple.yaml  banana.yaml  dashboard.yaml  ingress.yaml
lambdas/scrape/: __init__.py  handler.py
